@@ -1,6 +1,6 @@
 Package: cluster
-Version: 1.11.10
-Date: 2008-02-29
+Version: 1.11.11
+Date: 2008-04-..
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
